Intentando hacer el CRUD al challenge

--- a/screens/index.login.html
+++ b/screens/index.login.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraGeek</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/reset.css">
-    <link rel="stylesheet" href="assets/header.css">
-    <link rel="stylesheet" href="assets/login.css">
-    <link rel="stylesheet" href="assets/contacto.css">
-    <link rel="stylesheet" href="assets/footer.css">
+    <link rel="stylesheet" href="/assets/reset.css">
+    <link rel="stylesheet" href="/assets/header.css">
+    <link rel="stylesheet" href="/assets/login.css">
+    <link rel="stylesheet" href="/assets/contacto.css">
+    <link rel="stylesheet" href="/assets/footer.css">
 </head>
 <body>
     <header class="header">
@@ -65,7 +65,7 @@
     <footer>
         <section class="footer">
             <div class="footer__rodapie">
-                <img class="footer__img" src="img/IconoWeb 2023.png">
+                <img class="footer__img" src="/img/IconoWeb 2023.png">
                 <p class="copyright">&copy Copyright | BULLA 2023</p>
             </div>
         </section>
