--- a/screens/index.carrito.html
+++ b/screens/index.carrito.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraGeek</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/reset.css">
-    <link rel="stylesheet" href="assets/header.css">
-    <link rel="stylesheet" href="assets/carrito.css">
-    <link rel="stylesheet" href="assets/contacto.css">
-    <link rel="stylesheet" href="assets/footer.css">
+    <link rel="stylesheet" href="/assets/reset.css">
+    <link rel="stylesheet" href="/assets/header.css">
+    <link rel="stylesheet" href="/assets/carrito.css">
+    <link rel="stylesheet" href="/assets/contacto.css">
+    <link rel="stylesheet" href="/assets/footer.css">
 </head>
 <body>
     <header class="header">
@@ -19,7 +19,7 @@
                 <input class="header--buscador" type="text" placeholder="¿Qué deseas buscar?">
                 <button class="header--search" type="submit"><img src="/img/Icone.png"></button>
             </div>
-            <button class="menu--admin" href="screens/index.html" onclick="login">Menú Administrador</button>
+            <button class="menu--admin" href="/screens/index.html" onclick="login">Menú Administrador</button>
         </section>
     </header>
 
@@ -28,11 +28,10 @@
             <div class="carrito--formulario">
                 <h2 class="carrito--titulo">Agregar Nuevo Producto</h2>
                 <form class="carrito--form">
-                    <input class="carrito--input" name="name" id="name" type="text" placeholder="URL de la Imagen">
-                    <input class="carrito--input" name="name" id="name" type="text" placeholder="Categoría">
+                    <input class="carrito--input" name="imageURL" id="imageURL" type="text" placeholder="URL de la Imagen">
                     <input class="carrito--input" name="name" id="name" type="text" placeholder="Nombre del Producto">
-                    <input class="carrito--input" name="name" id="name" type="text" placeholder="Precio del Producto">
-                    <input class="carrito--input--descripcion" name="name" id="name" type="text" placeholder="Descripción del Producto">
+                    <input class="carrito--input" name="price" id="price" type="text" placeholder="Precio del Producto">
+                    <input class="carrito--input--descripcion" name="description" id="description" type="text" placeholder="Descripción del Producto">
                     <button class="carrito--boton" type="submit" href="#">Agregar Producto</button>
                 </form>
             </div>
@@ -69,7 +68,7 @@
     <footer>
         <section class="footer">
             <div class="footer__rodapie">
-                <img class="footer__img" src="img/IconoWeb 2023.png">
+                <img class="footer__img" src="/img/IconoWeb 2023.png">
                 <p class="copyright">&copy Copyright | BULLA 2023</p>
             </div>
         </section>
