--- a/screens/index.galeria.html
+++ b/screens/index.galeria.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraGeek</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/reset.css">
-    <link rel="stylesheet" href="assets/header.css">
-    <link rel="stylesheet" href="assets/productos.css">
-    <link rel="stylesheet" href="assets/galeria.css">
-    <link rel="stylesheet" href="assets/contacto.css">
-    <link rel="stylesheet" href="assets/footer.css">
+    <link rel="stylesheet" href="/assets/reset.css">
+    <link rel="stylesheet" href="/assets/header.css">
+    <link rel="stylesheet" href="/assets/productos.css">
+    <link rel="stylesheet" href="/assets/galeria.css">
+    <link rel="stylesheet" href="/assets/contacto.css">
+    <link rel="stylesheet" href="/assets/footer.css">
 </head>
 <body>
     <header class="header">
@@ -34,10 +34,10 @@
             <div class="galeria">
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/StarWars1.png">
+                        <img class="galeria--img" src="/img/StarWars1.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">StarWars XYZ</h3>
@@ -46,10 +46,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/StarWars2.png">
+                        <img class="galeria--img" src="/img/StarWars2.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">StarWars XYZ</h3>
@@ -58,10 +58,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/StarWars3.png">
+                        <img class="galeria--img" src="/img/StarWars3.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">StarWars XYZ</h3>
@@ -70,10 +70,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/StarWars4.png">
+                        <img class="galeria--img" src="/img/StarWars4.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">StarWars XYZ</h3>
@@ -82,10 +82,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/StarWars5.png">
+                        <img class="galeria--img" src="/img/StarWars5.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">StarWars XYZ</h3>
@@ -94,10 +94,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/StarWars6.png">
+                        <img class="galeria--img" src="/img/StarWars6.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">StarWars XYZ</h3>
@@ -109,10 +109,10 @@
             <div class="galeria">
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/Consolas1.png">
+                        <img class="galeria--img" src="/img/Consolas1.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">Consolas XYZ</h3>
@@ -121,10 +121,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/Consolas2.png">
+                        <img class="galeria--img" src="/img/Consolas2.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">Consolas XYZ</h3>
@@ -133,10 +133,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/Consolas3.png">
+                        <img class="galeria--img" src="/img/Consolas3.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">Consolas XYZ</h3>
@@ -145,10 +145,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/Consolas4.png">
+                        <img class="galeria--img" src="/img/Consolas4.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">Consolas XYZ</h3>
@@ -157,10 +157,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/Consolas5.png">
+                        <img class="galeria--img" src="/img/Consolas5.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">Consolas XYZ</h3>
@@ -169,10 +169,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/Consolas6.png">
+                        <img class="galeria--img" src="/img/Consolas6.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">Consolas XYZ</h3>
@@ -184,10 +184,10 @@
             <div class="galeria">
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/Otros1.png">
+                        <img class="galeria--img" src="/img/Otros1.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
@@ -196,10 +196,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/Otros2.png">
+                        <img class="galeria--img" src="/img/Otros2.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
@@ -208,10 +208,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/Otros3.png">
+                        <img class="galeria--img" src="/img/Otros3.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
@@ -220,10 +220,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/Otros4.png">
+                        <img class="galeria--img" src="/img/Otros4.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
@@ -232,10 +232,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/Otros5.png">
+                        <img class="galeria--img" src="/img/Otros5.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
@@ -244,10 +244,10 @@
                 </div>
                 <div class="productos--contenedor">
                     <div class="galeria--contenedor--img">
-                        <img class="galeria--img" src="img/Otros6.png">
+                        <img class="galeria--img" src="/img/Otros6.png">
                         <div class="galeria--cont--editar">
-                            <img class="galeria--img--editar" src="img/Vector.png">
-                            <img class="galeria--img--editar" src="img/edit_black_24dp 1.png">
+                            <img class="galeria--img--editar" src="/img/Vector.png">
+                            <img class="galeria--img--editar" src="/img/edit_black_24dp 1.png">
                         </div>
                     </div>
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
@@ -288,7 +288,7 @@
     <footer>
         <section class="footer">
             <div class="footer__rodapie">
-                <img class="footer__img" src="img/IconoWeb 2023.png">
+                <img class="footer__img" src="/img/IconoWeb 2023.png">
                 <p class="copyright">&copy Copyright | BULLA 2023</p>
             </div>
         </section>
