--- a/screens/index.html
+++ b/screens/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraGeek</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/reset.css">
-    <link rel="stylesheet" href="assets/header.css">
-    <link rel="stylesheet" href="assets/banner.css">
-    <link rel="stylesheet" href="assets/productos.css">
-    <link rel="stylesheet" href="assets/contacto.css">
-    <link rel="stylesheet" href="assets/footer.css">
+    <link rel="stylesheet" href="/assets/reset.css">
+    <link rel="stylesheet" href="/assets/header.css">
+    <link rel="stylesheet" href="/assets/banner.css">
+    <link rel="stylesheet" href="/assets/productos.css">
+    <link rel="stylesheet" href="/assets/contacto.css">
+    <link rel="stylesheet" href="/assets/footer.css">
 </head>
 <body>
     <header class="header">
@@ -20,153 +20,153 @@
                 <input class="header--buscador" type="text" placeholder="¿Qué deseas buscar?">
                 <button class="header--search" type="submit"><img src="/img/Icone.png"></button>
             </div>
-            <button class="header--login" href="screens/index.login.html" onclick="login">Login</button>
+            <button class="header--login" href="/screens/index.login.html" onclick="login">Login</button>
         </section>
     </header>
 
     <main>
         <section class="banner">
-            <img class="banner--img" src="img/Hero.png" alt="banner">
+            <img class="banner--img" src="/img/Hero.png" alt="banner">
         </section>
 
-        <section class="productos--categorias">
+        <section class="productos--categorias" data-product>
             <div class="categorias--encabezado">
                 <h2 class="categorias--titulo">Star Wars</h2>
                 <div class="categorias--link">
-                    <p class="categorias--enlace" href="#">Ver todo</p>    
-                    <img class="categorias--enlace--img" src="img/arrow_back_black_24dp 1.png" href="#">
+                    <p class="categorias--enlace" href="/screens/index.galeria.html">Ver todo</p>    
+                    <img class="categorias--enlace--img" src="/img/arrow_back_black_24dp 1.png" href="/screens/index.galeria.html">
                 </div>
             </div>
-            <div class="productos">
+            <!-- <div class="productos">
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/StarWars1.png">
+                    <img class="producto--img" src="/img/StarWars1.png">
                     <h3 class="producto--titulo">StarWars XYZ</h3>
                     <p class="producto--precio">$60,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/StarWars2.png">
+                    <img class="producto--img" src="/img/StarWars2.png">
                     <h3 class="producto--titulo">StarWars XYZ</h3>
                     <p class="producto--precio">$60,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/StarWars3.png">
+                    <img class="producto--img" src="/img/StarWars3.png">
                     <h3 class="producto--titulo">StarWars XYZ</h3>
                     <p class="producto--precio">$60,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/StarWars4.png">
+                    <img class="producto--img" src="/img/StarWars4.png">
                     <h3 class="producto--titulo">StarWars XYZ</h3>
                     <p class="producto--precio">$60,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/StarWars5.png">
+                    <img class="producto--img" src="/img/StarWars5.png">
                     <h3 class="producto--titulo">StarWars XYZ</h3>
                     <p class="producto--precio">$60,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/StarWars6.png">
+                    <img class="producto--img" src="/img/StarWars6.png">
                     <h3 class="producto--titulo">StarWars XYZ</h3>
                     <p class="producto--precio">$60,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
-            </div>
+            </div> -->
             
             <div class="categorias--encabezado">
                 <h2 class="categorias--titulo">Consolas</h2>
                 <div class="categorias--link">
                     <p class="categorias--enlace" href="#">Ver todo</p>    
-                    <img class="categorias--enlace--img" src="img/arrow_back_black_24dp 1.png" href="#">
+                    <img class="categorias--enlace--img" src="/img/arrow_back_black_24dp 1.png" href="/screens/index.galeria.html">
                 </div>
             </div>
-            <div class="productos">
+            <!-- <div class="productos">
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/Consolas1.png">
+                    <img class="producto--img" src="/img/Consolas1.png">
                     <h3 class="producto--titulo">Consolas XYZ</h3>
                     <p class="producto--precio">$80,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/Consolas2.png">
+                    <img class="producto--img" src="/img/Consolas2.png">
                     <h3 class="producto--titulo">Consolas XYZ</h3>
                     <p class="producto--precio">$80,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/Consolas3.png">
+                    <img class="producto--img" src="/img/Consolas3.png">
                     <h3 class="producto--titulo">Consolas XYZ</h3>
                     <p class="producto--precio">$80,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/Consolas4.png">
+                    <img class="producto--img" src="/img/Consolas4.png">
                     <h3 class="producto--titulo">Consolas XYZ</h3>
                     <p class="producto--precio">$80,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/Consolas5.png">
+                    <img class="producto--img" src="/img/Consolas5.png">
                     <h3 class="producto--titulo">Consolas XYZ</h3>
                     <p class="producto--precio">$80,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/Consolas6.png">
+                    <img class="producto--img" src="/img/Consolas6.png">
                     <h3 class="producto--titulo">Consolas XYZ</h3>
                     <p class="producto--precio">$80,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
-            </div>
+            </div> -->
 
             <div class="categorias--encabezado">
                 <h2 class="categorias--titulo">Accesorios</h2>
                 <div class="categorias--link">
                     <p class="categorias--enlace" href="#">Ver todo</p>    
-                    <img class="categorias--enlace--img" src="img/arrow_back_black_24dp 1.png" href="#">
+                    <img class="categorias--enlace--img" src="/img/arrow_back_black_24dp 1.png" href="#">
                 </div>
             </div>
-            <div class="productos">
+            <!-- <div class="productos">
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/Otros1.png">
+                    <img class="producto--img" src="/img/Otros1.png">
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
                     <p class="producto--precio">$30,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/Otros2.png">
+                    <img class="producto--img" src="/img/Otros2.png">
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
                     <p class="producto--precio">$30,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/Otros3.png">
+                    <img class="producto--img" src="/img/Otros3.png">
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
                     <p class="producto--precio">$30,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/Otros4.png">
+                    <img class="producto--img" src="/img/Otros4.png">
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
                     <p class="producto--precio">$30,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/Otros5.png">
+                    <img class="producto--img" src="/img/Otros5.png">
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
                     <p class="producto--precio">$30,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
                 <div class="productos--contenedor">
-                    <img class="producto--img" src="img/Otros6.png">
+                    <img class="producto--img" src="/img/Otros6.png">
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
                     <p class="producto--precio">$30,00</p>
-                    <button class="producto--boton" href="#">Ver producto</button>
+                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
                 </div>
-            </div>
+            </div> -->
         </section>
 
         <section class="contacto">
@@ -200,7 +200,7 @@
     <footer>
         <section class="footer">
             <div class="footer__rodapie">
-                <img class="footer__img" src="img/IconoWeb 2023.png">
+                <img class="footer__img" src="/img/IconoWeb 2023.png">
                 <p class="copyright">&copy Copyright | BULLA 2023</p>
             </div>
         </section>
